--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass -w sass/main.scss css/style.css",
-    "start" :"live-server --port=8080"
+    "live": "live-server --port=8080",
+    "dev": "start npm run compile:sass & start npm run live"
+
+
   },
   "repository": {
     "type": "git",
