--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass -w sass/main.scss css/style.css",
+    "watch:sass": "node-sass -w sass/main.scss css/style.css",
     "live": "live-server --port=8080",
-    "dev": "start npm run compile:sass & start npm run live"
+    "dev": "start npm run watch:sass & start npm run live",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+    "prefix:css": "postcss css/style.concat.css --use autoprefixer browserslist 'last 10 versions' -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -19,7 +24,11 @@
   },
   "homepage": "https://github.com/shaharbukra/CSS_Natours#readme",
   "devDependencies": {
-    "node-sass": "^4.11.0"
+    "autoprefixer": "^9.4.7",
+    "concat": "^1.0.3",
+    "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^6.1.1"
   },
   "dependencies": {}
 }
